# MarkovJuniorRaylib

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  build.ninja  build.ps1  cmake_install.cmake  compile_commands.json  default.profraw  main.cpp
.cache/clangd/index/: main.cpp.8AA7AC26DB46FD80.idx
